<resources>

    <string name="app_name" translatable="false">Reer</string>

    <!--登陆页面-->
    <string name="select_text_login" translatable="false">请选择一个服务登陆</string>
    <string name="feedly_text_login" translatable="false">feedly</string>
    <string name="localhost_text_login" translatable="false">本地用户</string>
    <string name="backfeed_text_login" translatable="false">出现问题？点这里反馈</string>

    <!--设置页面-->
    <string name="nightMode_text_settings" translatable="false">夜间模式</string>
    <string name="scrollMark_text_settings" translatable="false">滚动标为已读</string>
    <string name="scrollMark_description_settings" translatable="false">在阅读列表中，通过滑动滚出的项目将标记为已读</string>

    <string name="openscreen_setting" translatable="false">是否启用开屏动画</string>
    <string name="openscreen_description_setting" translatable="false">打开或关闭应用启动时的展示动画</string>


    <!--未读列表页面-->


    <!--标记列表页面-->


    <!--查询RSS列表页面-->
    <string name="et_rssQuery_hint" translatable="false">请输入要订阅的rss名称</string>
    <string name="btn_rssQuery" translatable="false">query</string>

    <string name="title_activity_open_screen">openScreenActivity</string>
    <string name="openScreen_text">\?\n阅读\n能改变什么呢</string>

    <!--about页面-->
    <string name="app_edition">0.8</string>
    <string name="app_descrition">「Reer致力于为Android提供一个简洁、流畅、优雅的rss离线阅读平台」</string>
    <string name="app_email">lxxlxx8888@outlook.com</string>

    <!--description页面-->
    <string name="sample_content">人在郑州

整个大三上学期，从大二结束完全丧失了对WindowsPhone的信仰，知乎简介也加上了「曾经的软吹」这个略带自嘲的标签。也就开始了换方向之路，一开始想依靠.net的基础想投身于unity游戏开发，但不久我就感觉游戏开发索然无味，终于，一段时间的纠结之后，坚定了Android开发决心。
于是，决定第一次寒假留在外面，继续学习android开发，也有一个纠结的问题需要好好思考一下：「是否考研」。权衡一番，决定投奔郑州的一哥们–刚，在他们学校周围租了一间单间。我是一个很享受独居生活的人，所以在这里简直如鱼得水，在这里我看完了android开发基础的教程，算是简单的完成了android开发的三步走的第一步。同时，考研的问题也有了答案：「不考」

那的羊肉汤至今怀念

返校

经过一个寒假的躲藏，在开学之时及时赶回了学校。
基础、模仿、自主开发安卓学习的历程进行到了第二步，在图书馆、各个公开课、视频网站找到了大量的开发Demo，开始了代码模仿之路和Java基础知识的巩固。
很快，我们的专业实习来到了，由于之前我跟我们的莫教授说过希望可以有一个开发的职位去实习，所以，莫教授安排我去了苏州。这公司下属于中科院，做开发的也多是遥感所和各个大学的研究生。实习内容还是相当多的，但都是gis开发相关的，说实话，我对gis开发并没有什么兴趣，感觉离消费者有点遥远。开始由于要使用owncloud来搭建内部私有云，在搭建的摸索过程中让我对Linux下的操作变得比较熟练了，以及对前端技术重新梳洗了一遍，并帮胡老师他们测试了一下leaflet框架。还有一些gis开发的其它杂项。
四个月的实习很快结束了，苏州，我也留下了比较美好的印象。
收拾行李，打包邮寄，很快就离开了这个短居之地。
        「下半年」

毕业之际：大四

这学期似乎和往常没什么区别，必修、选修、吃饭、跑步、搬水，但感觉到对学校第一次出现了留恋的感觉。
开发依然在模仿阶段进行，各项毕业事宜接踵而至。毕业论文和工作成为我每天忙碌的事情，由于错过了校招时间，只好网投，但到目前依然没有合意的，只能寄希望于过年后的春招，不得不感慨现在android真的不好找工作，一度再次萌发了换方向的想法，但很快打消了，继续提高自己的技术为要。
期末考试结束后，开始刷起了笔试题，也正好趁这个时间写一个app以便面试的时候演示之用。越来越感觉自己的技术十分浅薄，简直不值一提。
    </string>


    <!--inputRssLink页面-->
    <string name="et_rsslink_hint">请输入要添加的Rss链接</string>
    <string name="tv_recommend">为你推荐</string>

</resources>
