<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rssreader.mrlu.myrssreader.LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#4583cb"
    >

    <ImageView
        android:src="@drawable/icon"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"

        android:layout_width="70dp"
        android:layout_height="70dp" />

    <TextView
        android:textSize="18sp"
        android:layout_marginBottom="50dp"

        android:text="@string/select_text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/background_dark" />


    <Button
        android:layout_marginBottom="20dp"

        android:textStyle="bold"
        android:text="@string/feedly_text_login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@color/colorAccent"
        android:textColor="@android:color/background_light"
        android:minHeight="39dp" />

    <Button


        android:textStyle="bold"
        android:text="@string/localhost_text_login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@color/colorAccent"
        android:textColor="@android:color/background_light"
        android:minHeight="39dp" />


    <TextView
        android:autoLink="email"
        android:textColor="@color/colorPrimary"
        android:text="@string/backfeed_text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:textColorLink="@color/colorPrimaryDark" />


</LinearLayout>
