<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.rssreader.mrlu.myrssreader.View.AboutActivity">

    <ImageView
        android:src= "@drawable/icon"
        android:layout_marginTop= "80dp"
        android:layout_marginBottom= "20dp"

        android:layout_width="90dp"
        android:layout_height="90dp" />

    <TextView
        android:textSize="40dp"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:paddingTop="10dp"
        android:textSize="20dp"
        android:text="@string/app_edition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:paddingTop="40dp"
        android:orientation="horizontal"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="15dp"
            android:text="联系开发者:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:paddingLeft="10dp"
            android:textSize="15dp"
            android:text="@string/app_email"
            android:autoLink="email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>





</LinearLayout>



